--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 
 # Ignore bundler config.
 /.bundle
-
+/.vagrant
+/Vagrantfile
+/Cheffile
+/Cheffile.lock
+/cookbooks
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
